@@ -112,6 +112,7 @@ typedef struct _GimpLayerMask       GimpLayerMask;
 typedef struct _GimpUndo            GimpUndo;
 typedef struct _GimpImageUndo       GimpImageUndo;
 typedef struct _GimpItemUndo        GimpItemUndo;
+typedef struct _GimpItemPropUndo    GimpItemPropUndo;
 typedef struct _GimpChannelUndo     GimpChannelUndo;
 typedef struct _GimpDrawableUndo    GimpDrawableUndo;
 typedef struct _GimpUndoStack       GimpUndoStack;
